Code quality changes
Got rid of most bad smells