@@ -14,7 +14,9 @@ public class Evaluator extends Visitor {
     /**
      * Default constructor of the class. Does not initialise anything.
      */
-    public Evaluator() {}
+    public Evaluator() {
+        // nothing to be done
+    }
 
     /** The result of the evaluation will be stored in this private variable */
     private int computedValue;
@@ -40,12 +42,12 @@ public class Evaluator extends Visitor {
     public void visit(Operation o) throws ArithmeticException{
         ArrayList<Integer> evaluatedArgs = new ArrayList<>();
         //first loop to recursively evaluate each subexpression
-        for(Expression a:o.args) {
+        for(Expression a:o.getArgs()) {
             a.accept(this);
             evaluatedArgs.add(computedValue);
         }
-        //second loop to accumulate all the evaluated subresults
-        int temp = evaluatedArgs.get(0);
+        //second loop to accumulate all the evaluated sub results
+        int temp = evaluatedArgs.getFirst();
         int max = evaluatedArgs.size();
         for(int counter=1; counter<max; counter++) {
             temp = o.op(temp,evaluatedArgs.get(counter));
